# library-catalog

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yml
src/: run.py
src/library_catalog/: asgi.py  settings.py  urls.py  wsgi.py
src/library_catalog/migrations/: 0001_initial.py
src/library_catalog/models/: __init__.py  book.py
src/library_catalog/serializers/: __init__.py  book.py
src/library_catalog/static/js/: app.js
src/library_catalog/static/templates/: index.html
src/library_catalog/views/: book.py
src/thechannelcompany/: asgi.py  settings.py  urls.py  wsgi.py
src/thechannelcompany/models/: __init__.py  book.py
src/thechannelcompany/serializers/: __init__.py  book.py
src/thechannelcompany/static/js/: ISO6391.js  languages.js
src/thechannelcompany/views/: book.py
