[tool.poetry]
name = "thechannelcompany"
version = "0.1.0"
description = "Daniel's programming tests"
authors = ["Daniel <daniel@danielpgleason.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
